refactor: 디자인 수정 마이페이지, 상세페이지

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -92,6 +92,15 @@
     color: var(--bs-secondary) !important;
 }
 
+#review-button-container {
+    margin-left: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    min-width: 200px;
+    align-items: center;
+}
+
 /*** Section Title Start ***/
 .section-title {
     position: relative;
