--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -180,9 +180,9 @@
                                             <div class="col-md-2" style="font-size: 15px;"
                                                  th:text="'별점 : '+ ${review.getScore()}">
                                             </div>
-                                            <div class="btn-area col-md-2">
-                                                <button class="btn btn-primary" type="button">Button</button>
-                                                <button class="btn btn-primary" type="button">Button</button>
+                                            <div class="btn-area col-md-2" id="review-button-container">
+                                                <button class="btn btn-primary" type="button">리뷰 수정</button>
+                                                <button class="btn btn-primary" type="button">리뷰 삭제</button>
                                             </div>
                                         </div>
                                     </div>
