refactor: 회원정보 페이지 푸터 고정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -92,6 +92,14 @@
     color: var(--bs-secondary) !important;
 }
 
+#user-form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 122px;
+}
+
 #review-button-container {
     margin-left: auto;
     display: flex;
