--- a/src/main/resources/templates/mypageInfo.html
+++ b/src/main/resources/templates/mypageInfo.html
@@ -14,7 +14,7 @@
 <div style="background-color: #0c4128" th:replace="~{layout/navigation-bar :: nav}"></div>
 <div style="background: linear-gradient(rgba(19, 53, 123, .8), rgba(19, 53, 123, .8)), url(/img/tour-booking-bg.jpg);
 ;height: 97px;"></div>
-<div style="display: flex;flex-direction: column;align-items: center;justify-content: center">
+<div id="user-form-container">
     <h2 style="color: #0b204a; margin-top: 88px">내 정보 수정</h2>
     <form>
         <h3>이름</h3>
