--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -43,5 +43,6 @@
         1. ?version=n 추가로 확인해보기!
         2. 페이지 소스 보기 -->
         <script src="/js/common/datepicker.js"></script>
+        <script defer src="/js/review.js"></script>
     </section>
 </html>
