comment : 메인 화면 문구 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,6 +61,7 @@
         <div class="mx-auto text-center mb-5" style="max-width: 900px;">
             <h5 class="section-title px-3">Hot accommodations</h5>
             <h1 class="mb-0">인기 숙소 Top6</h1>
+            <p class="mb-0">이용자들의 리뷰 별점에 따라 높은 순서로 인기 숙소를 확인해보세요!</p>
         </div>
         <div class="packages-carousel owl-carousel">
             <div class="packages-item" th:each="accommodation,accommodationStat : ${highScoreAccommodations}">
@@ -99,8 +100,7 @@
         <div class="mx-auto text-center mb-5" style="max-width: 900px;">
             <h5 class="section-title px-3">Hot places</h5>
             <h1 class="mb-4">인기 지역 Top6</h1>
-            <p class="mb-0">리뷰 별점이 높은 숙소들을 소개합니다 !
-            </p>
+            <p class="mb-0">최근 7일 간 예약이 많았던 숙소의 지역들을 소개합니다!</p>
         </div>
         <div class="tab-class text-center">
             <div class="tab-content">
