--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -191,7 +191,7 @@
                             <div class="col-md-2">
                                 <div class="text-lg-end">
                                     <a class="btn btn-primary rounded-pill py-3 px-5 mt-2"
-                                       th:href="${#authorization.expression('isAuthenticated()')} and @{${accommodation.getId()}+'/'+${room.getRoomId()}+'/reservationPage'}">예약하기</a>
+                                       th:href="@{${accommodation.getId()}+'/'+${room.getRoomId()}+'/reservationPage'}">예약하기</a>
                                 </div>
                             </div>
                         </div>
