--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -55,7 +55,7 @@
                                             <div class="img-container">
                                                 <img alt="Image"
                                                      class="img-fluid w-35 mx-auto rounded d-block"
-                                                     src="/img/explore-tour-1.jpg">
+                                                     th:src="${accommodation.getImageUrl()}">
                                             </div>
                                             <div class="row g-3">
                                                 <div class="col-md-6 text-md-start text-center text-white" style="font-size: 20px;" th:text="${room.name}">
@@ -311,7 +311,6 @@
                 }
                 // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
                 alert('예약 신청이 완료되었습니다.');
-                //TODO: 나중에 내정보 페이지로 가도록 하면 될 듯
                 window.location.href = '/';
             })
             .catch(error => {
