--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -78,7 +78,7 @@
             <div class="col" th:each="accommodation : ${accommodations}">
                 <a th:href="@{${'/accommodation/' + accommodation.getAccommodationId()}}">
                 <div class="card h-100">
-                    <img alt="..." class="card-img-top" th:src="@{/img/destination-1.jpg}">
+                    <img alt="..." class="card-img-top" th:src="${accommodation.getImageUrl()}" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${accommodation.getName()}">Name</h5>
                         <p class="card-text" th:text="${accommodation.getAddress()}">Address</p>
