Feat: 사업자등록번호 입력

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,8 @@
                 <label for="accommodation-provider-register" style="margin-left: 20px">사업자</label>
                 <input id="accommodation-provider-register"  name="role" type="radio" value="BUSINESS"/>
             </fieldset>
+            <label for="business-check-input" id="business-check-input-label" style="display: none">사업자 번호를 입력해주세요</label>
+            <input id="business-check-input" name="email-check-input" type="text" style="display: none">
             <input class="input" id="phone" name="phone" pattern="[0-9]{11}" placeholder="Phone Number -를 빼고 입력해주세요" required type="tel">
             <div style="display: flex">
                 <span style="margin-top: 17px">생일</span>
